# agent.cpp

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
examples/basic/: basic.cpp
include/agent-cpp/: agent.h
src/core/: agent.cpp
src/core/providers/: llama_provider.cpp  openai_compatible_provider.cpp
